Extract MemoryUtilAccessor behind MemoryUtil
- Move sun.misc.Unsafe implementation into UnsafeMemoryAccessor
- MemoryUtil delegates to a resolved MemoryUtilAccessor instance
- No behavior change: UnsafeMemoryAccessor is the only, default accessor